<resources>
    <string name="app_name">Prueba MovilBox</string>
    <string name="hint_section_name">Productos</string>
    <string name="description_image_product">foto del producto</string>
    <string name="name_product">nombre del producto</string>
    <string name="mark_product">marca del producto</string>
    <string name="rating_product">rating</string>
    <string name="price_product">precio</string>
    <string name="fail_response">"Ha ocurrido un error revise su conexión a internet e intente nuevamente "</string>
    <string name="accept">aceptar</string>
    <string name="product_price">$ %1$d</string>
    <string name="key_product">key_product</string>
    <string name="product_details">Detalles del producto</string>
    <string name="description">Descripción</string>
    <string name="product_name">Iphone X</string>
    <string name="precio">precio</string>
    <string name="price">precio</string>
    <string name="discount">descuento</string>
    <string name="category">categoria</string>
    <string name="rating">rating</string>
    <string name="stock">cantidad</string>
    <string name="search">Buscar</string>
    <string name="response_empty">Ningun resultado coincide con tu busqueda!</string>
</resources>